--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -92,6 +92,8 @@
                 </ul>
                 <p class="copyright text-muted">
                     Copyright &copy; {{ site.title }} {{ site.time | date: '%Y' }}
+                    <br>
+                    Powered by <a href="https://huangxuan.me">Hux Blog</a>
                 </p>
             </div>
         </div>
